# uniproc

./: .gitignore  AGENTS.md  Cargo.toml  README.md  changes.patch
crates/app-contracts/: Cargo.toml  build.rs
crates/app-contracts/src/: lib.rs
crates/app-contracts/src/features/: agents.rs  context_menu.rs  cosmetics.rs  environments.rs  l10n.rs  mod.rs  navigation.rs  processes.rs  run_task.rs  services.rs  window_actions.rs  windows_manager.rs
crates/app-contracts/src/features/agents/: model.rs
crates/app-contracts/src/features/cosmetics/: mod.rs  model.rs  ports.rs
crates/app-contracts/src/features/environments/: bindings.rs  model.rs  ports.rs
crates/app-contracts/src/features/navigation/: bindings.rs  mod.rs  model.rs  ports.rs
crates/app-contracts/src/features/processes/: bindings.rs  model.rs  ports.rs
crates/app-contracts/src/features/services/: bindings.rs  mod.rs  model.rs  ports.rs
crates/app-contracts/src/features/sidebar/: bindings.rs  mod.rs  model.rs  ports.rs
crates/app-contracts/src/features/tabs/: bindings.rs  model.rs  ports.rs
crates/app-contracts/src/features/window_actions/: bindings.rs  model.rs  ports.rs
crates/build-utils/: Cargo.toml
crates/build-utils/src/: collector.rs  lib.rs  slint_parser.rs
crates/context/: Cargo.toml  build.rs  trace-scopes.toml
crates/context/locales/: en.toml
crates/context/src/: icons.rs  l10n.rs  lib.rs  page_status.rs  trace.rs
crates/context/src/caches/: mod.rs  strings.rs
crates/context/src/caches/icons/: mod.rs  windows.rs
crates/context/src/native_windows/: mod.rs  slint_factory.rs  stub.rs  windows.rs
crates/context/src/settings/: mod.rs  reactive.rs  store.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: app.rs  feature.rs  icons.rs  lib.rs  lifecycle_tracker.rs  reactor.rs  signal.rs  test_kit.rs  trace.rs
crates/core/src/actor/: addr.rs  binder.rs  ctx.rs  envelope.rs  macros.rs  mod.rs  registry.rs  traits.rs
crates/core/src/actor/event_bus/: builder.rs  mod.rs  rpc.rs  subscribe.rs
crates/desktop/: Cargo.toml  build.rs
crates/desktop/src/: bootstrap.rs  main.rs
crates/domain/: Cargo.toml  build.rs
crates/domain/locales/: en.toml
crates/domain/src/: lib.rs
crates/domain/src/features/: mod.rs
crates/domain/src/features/agents/: Cargo.toml  actor.rs  backend.rs  connection.rs  lib.rs  mod.rs  settings.rs
crates/domain/src/features/context_menu/: actors.rs  mod.rs  settings.rs
crates/domain/src/features/cosmetics/: mod.rs
crates/domain/src/features/environments/: Cargo.toml  host.rs  lib.rs  mod.rs
crates/domain/src/features/l10n/: apply.rs  mod.rs
crates/domain/src/features/navigation/: Cargo.toml  actor.rs  lib.rs  mod.rs  model.rs  settings.rs  state.rs
crates/domain/src/features/page_status/: mod.rs
crates/domain/src/features/processes/: Cargo.toml  lib.rs  mod.rs  settings.rs
crates/domain/src/features/run_task/: actors.rs  mod.rs
crates/domain/src/features/services/: mod.rs  settings.rs
crates/domain/src/features/settings/: mod.rs  settings.rs  store.rs
crates/domain/src/features/sidebar/: actor.rs  mod.rs  settings.rs
crates/domain/src/features/tabs/: actor.rs  mod.rs  model.rs  state.rs
crates/domain/src/features/test_discovery/: mod.rs
crates/domain/src/features/trace_settings/: mod.rs  settings.rs
crates/domain/src/features/window_actions/: actor.rs  actors.rs  mod.rs
crates/domain/src/features/windows_manager/: actor.rs  mod.rs
crates/domain/src/shared/: settings.rs
crates/foundation/services/: Cargo.toml
crates/foundation/services/src/caches/: strings.rs
crates/gui/: Cargo.toml  build.rs
crates/gui/src/: main.rs
crates/gui/src/core/: app.rs  mod.rs
crates/gui/src/features/: mod.rs
crates/gui/src/features/context_menu/: actors.rs  mod.rs  utils.rs
crates/gui/src/features/cosmetics/: mod.rs  utils.rs
crates/gui/src/features/envs/: host.rs  mod.rs
crates/gui/src/scanner/: mod.rs  types.rs
crates/gui/src/shared/: icons.rs  l10n.rs  mod.rs
crates/gui/ui/: app-window.slint  context-menu.slint  controls.slint  distro.slint  globals-export.slint  globals.slint  loader-area.slint  main-body.slint  process-view.slint  run-task-dialog.slint  sidebar.slint  title-bar.slint  wsl-distro-type.slint
crates/gui/ui/assets/: download.txt
crates/gui/ui/components/: selection-indicator.slint
crates/gui/ui/content/: index.slint
crates/gui/ui/shared/: icons.slint  localization.slint  theme.slint
crates/gui/ui/title/: controls.slint  title-bar.slint
crates/server/: Cargo.toml  dhat-heap.json
crates/server/src/: align_buffer.rs  lib.rs
crates/server/src/codec/: mod.rs  pool.rs  traits.rs
crates/server/src/domain/: mod.rs
crates/server/src/peer/: mod.rs  tpc_pool.rs
crates/server/src/server/: builder.rs  client.rs  client_per_core.rs  commands.rs  main_loop.rs  message_protocol.rs  mod.rs  protocol.rs  rkyv_protocol.rs  runtime.rs  tpc_pool.rs  utils.rs  worker.rs
crates/server/src/vsock/: linux.rs  mod.rs
crates/slint-adapter/: Cargo.toml  build.rs  slint_parser.rs
crates/slint-adapter/src/: lib.rs
crates/slint-adapter/src/adapters/: context_menu.rs  cosmetics.rs  environments.rs  l10n.rs  mod.rs  navigation.rs  processes.rs  run_task.rs  services.rs  window_actions.rs
crates/slint-adapter/src/features/: l10n.rs  mod.rs
crates/slint-adapter/src/native_windows/: linux.rs  mod.rs  windows.rs
crates/slint-adapter/ui/: app-window.slint  globals-export.slint  window-adapter.slint
crates/slint-adapter/ui/assets/: download.txt  layer-filled.cdr
crates/slint-adapter/ui/builtin/: dashboard.slint
crates/slint-adapter/ui/components/: combobox.slint  context-menu.slint  divider.slint  loader-area.slint  resize-handle.slint  selection-indicator.slint  table-view.slint
crates/slint-adapter/ui/content/: globals.slint  index.slint
crates/slint-adapter/ui/shared/: capabilities.slint  icons.slint  localization.slint  navigation.slint  theme.slint
crates/slint-adapter/ui/title/: controls.slint  title-bar.slint
crates/slint-adapter/ui/utils/: loader-area.slint  resize-area.slint
(+290 files in other folders)
