[workspace.package]
version = "0.1.0"
edition = "2024"


[workspace]
members = [
    "crates/*",
]

default-members = ["crates/gui"]

resolver = "2"

[workspace.dependencies]
app-core = { path = "crates/app-core" }
slint = { version = "=1.14.1", features = ["backend-winit", "renderer-winit-skia"] }
window-vibrancy = "0.7.1"
raw-window-handle = "0.6.2"
i-slint-backend-winit = "=1.14.1"
anyhow = "1.0.100"
windows = { version = "0.61.3", features = [
    "Win32_UI_Controls", "Win32_Graphics_Dwm", "Win32_UI_Shell",
    "Win32_Storage", "Win32_Storage_FileSystem", "Win32_System_Performance",
    "Win32_NetworkManagement", "Win32_NetworkManagement_IpHelper", "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock", "Win32_System_Threading", "UI",
    "UI_ViewManagement", "Win32_System_Hypervisor"] }

dashmap = "6.1.0"
flume = { version = "0.12.0", features = ["async"] }
static_assertions = "1.1.0"
sysinfo = "0.38.0"
fxhash = "0.2.1"
winit = "0.30.12"
dhat = "0.3"
ttl_cache = "0.5"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
smallvec = "1.15.1"
rkyv = { version = "0.8.14", features = ["bytecheck", "std"] }

serde = { version = "1.0.228", features = ["derive"] }
futures = "0.3.31"
compio = { version = "0.18.0", features = ["net", "io-compat", "process", "macros", "time"] }
bytes = "1.11.1"
socket2 = "0.6.2"
libc = "0.2.180"




