[workspace.package]
version = "0.1.0"
edition = "2024"


[workspace]
members = [
    "crates/*",
]

default-members = ["crates/desktop"]

resolver = "2"

[workspace.dependencies]
ogurpchik = { git = "https://github.com/Tam1SH/oguRPChik", branch = "master", features = ["rkyv-codec", "vsock"] }
rust-i18n = "3"
app-core = { path = "crates/app-core" }
app-contracts = { path = "crates/app-contracts" }
slint-adapter = { path = "crates/slint-adapter" }
slint = { version = "=1.14.1", features = ["renderer-skia"] }
uniproc-protocol = { git = "https://github.com/Tam1SH/uniproc-protocol", branch = "master" }

raw-window-handle = "0.6.2"
i-slint-backend-winit = "=1.14.1"
anyhow = "1.0.100"
toml = "0.9.8"

dashmap = "6.1.0"
flume = { version = "0.12.0", features = ["async"] }
static_assertions = "1.1.0"
sysinfo = "0.38.0"
fxhash = "0.2.1"
dhat = "0.3"
ttl_cache = "0.5"
tokio = { version = "1.49.0", features = ["full"] }
tracing = { version = "0.1.44", features = ["release_max_level_warn"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
smallvec = "1.15.1"
rkyv = { version = "0.8.14", features = ["bytecheck", "std"] }

serde = { version = "1.0.228", features = ["derive"] }
futures = "0.3.31"
compio = { version = "0.18.0", features = ["net", "io-compat", "process", "macros", "time"] }
bytes = "1.11.1"
socket2 = "0.6.2"
libc = "1.0.0-alpha.2"
serde_json = "1.0.149"

winit = "0.30.12"
windows = { version = "0.61.3", features = [
    "Win32_UI_Controls", "Win32_Graphics_Dwm", "Win32_UI_Shell",
    "Win32_Storage", "Win32_Storage_FileSystem", "Win32_System_Performance",
    "Win32_NetworkManagement", "Win32_NetworkManagement_IpHelper", "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock", "Win32_System_Threading", "UI",
    "UI_ViewManagement", "Win32_System_Hypervisor"] }
window-vibrancy = "0.7.1"
async-trait = "0.1.89"


[profile.release]
split-debuginfo = "packed"
lto = true
codegen-units = 1
strip = true
opt-level = "s"


