[package]
name = "app-contracts"
version.workspace = true
edition.workspace = true

[dependencies]
app-core.workspace = true
cfg-if.workspace = true
context.workspace = true
macros.workspace = true
ogurpchik.workspace = true
rkyv.workspace = true
serde.workspace = true
slint.workspace = true
uniproc-protocol.workspace = true
uuid.workspace = true
framework.workspace = true

[build-dependencies]
build-utils.workspace = true
