[package]
name = "build-utils"
version.workspace = true
edition.workspace = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir.workspace = true
i-slint-compiler.workspace = true
