[package]
name = "context"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
app-core.workspace = true
bon.workspace = true
i-slint-backend-winit.workspace = true
macros.workspace = true
raw-window-handle.workspace = true
rust-i18n.workspace = true
serde.workspace = true
serde_json.workspace = true
slint.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ttl_cache.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
window-vibrancy.workspace = true
windows.workspace = true

[dev-dependencies]
tempfile = "3.27.0"

[build-dependencies]
toml.workspace = true
