[package]
name = "app-core"
version.workspace = true
edition.workspace = true

[dependencies]
slint = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rust-i18n = { workspace = true }
anyhow = { workspace = true }
arc-swap = { workspace = true }
parking_lot = "0.12.5"
once_cell = "1.21.3"

[dev-dependencies]
tempfile = "3.27.0"

[build-dependencies]
toml.workspace = true
