[package]
name = "app-core"
version.workspace = true
edition.workspace = true

[dependencies]
slint = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
arc-swap = { workspace = true }
parking_lot = "0.12.5"
once_cell = "1.21.3"
uuid = { workspace = true }
