[package]
name = "desktop"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
domain-agents = { path = "../domain/src/features/agents" }
domain-environments = { path = "../domain/src/features/environments" }
domain-processes = { path = "../domain/src/features/processes" }
domain = { path = "../domain" }
app-core = { workspace = true }
slint-adapter = { workspace = true }
slint = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dhat = { workspace = true }

[build-dependencies]
winresource = "0.1.30"
