[package]
name = "desktop"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
domain-agents.workspace = true
domain-environments.workspace = true
domain-processes.workspace = true
domain.workspace = true
app-core = { workspace = true }
slint-adapter = { workspace = true }
slint = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dhat = { workspace = true }
component = "0.1.1"
clippy = "0.0.302"

[build-dependencies]
winresource = "0.1.30"
