[package]
name = "domain"
version.workspace = true
edition.workspace = true

[dependencies]
app-core = { workspace = true }
app-contracts = { workspace = true }
context.workspace = true
serde_json.workspace = true
tracing.workspace = true
slint = { workspace = true }
anyhow = { workspace = true }
uuid.workspace = true
tokio.workspace = true
macros.workspace = true
serde.workspace = true
widgets.workspace = true
dashmap.workspace = true
uniproc-protocol.workspace = true
rust-i18n.workspace = true
sysinfo.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true

[build-dependencies]
toml.workspace = true
