[package]
name = "gui"
version.workspace = true
edition.workspace = true

[dependencies]
slint = { workspace = true }
window-vibrancy = { workspace = true }
raw-window-handle = { workspace = true }
i-slint-backend-winit = { workspace = true }
anyhow = { workspace = true }
windows = { workspace = true, features = ["Win32_System_SystemInformation", "Wdk_System_Threading", "Wdk_System_SystemInformation"] }
sysinfo = { workspace = true }
winit = { workspace = true }
ttl_cache = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
smallvec = { workspace = true }
app-core = { workspace = true }
tokio = { workspace = true }
uniproc-protocol.workspace = true
ogurpchik.workspace = true
rust-i18n.workspace = true
rkyv.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
[build-dependencies]
slint-build = "1.14.1"
winresource = "0.1.30"
toml.workspace = true



