[package]
name = "slint-adapter"
version.workspace = true
edition.workspace = true

[dependencies]
cfg-if = { workspace = true }
slint = { workspace = true }
app-contracts = { workspace = true }
context.workspace = true
app-core = { workspace = true }
widgets.workspace = true
anyhow = { workspace = true }
i-slint-backend-winit = { workspace = true }
winit = { workspace = true }
macros.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
window-vibrancy = { workspace = true }
windows = { workspace = true, features = [
    "UI",
    "UI_ViewManagement",
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
build-utils = { path = "../build-utils" }
slint-build.workspace = true
toml.workspace = true
